crates/reinhardt-pages/tests/ui/wasm_server_api/fail/missing_server.stderr
error: missing `#[server]` variant for `target_name`
 --> tests/ui/wasm_server_api/fail/missing_server.rs:8:9
  |
8 |     pub fn target_name() -> &'static str {
  |            ^^^^^^^^^^^
